<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Screen Recorder</string>
    <string name="app_name_firt">Screen</string>
    <string name="app_name_second">Recorder</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_more_app">More app</string>
    <string name="menu_share">Share</string>
    <string name="menu_language">Language</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="screen_recorder">Screen Recorder</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="no_video">You don\'t have any videos!</string>
    <string name="video_settings">Videos Settings</string>
    <string name="resolution">Resolution</string>
    <string name="bit_rate">Bit rate</string>
    <string name="frame_per_second">Frames per second</string>
    <string name="orientation">Orientation</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="record_audio">Record audio</string>
    <string name="save_options">Save Options</string>
    <string name="custom_app">Custom App</string>
    <string name="target_app">Enable target app</string>
    <string name="chosse_app">Choose app</string>
    <string name="detail_target_app">Open target app before recording</string>
    <string name="detail_choose_app">Choose an app to start by default while recording</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="trim">Trim</string>
    <string name="screenshots">Screenshot</string>
    <string name="camera" tools:ignore="DuplicateDefinition">Camera</string>
    <string name="brush" tools:ignore="DuplicateDefinition">Brush</string>
    <string name="tools">Tools</string>
    <string name="record">Record</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="size">Size</string>
    <string name="recording_finished">Recording is finished</string>
    <string name="screenshot_finished">Screenshot finished</string>
    <string name="recording">Recording</string>
    <string name="save_location">Save location</string>
    <string name="file_name_fomart">File name format</string>
    <string name="file_name_prefix">File name prefix</string>
    <string name="record_setting">Recording Settings</string>
    <string name="floating_control">Use Floating Controls</string>
    <string name="description_floating_control">Enable/Disable floating controls which draws over every screen</string>
    <string name="count_down_timer">Countdown Timer</string>
    <string name="vibrate">Vibrate</string>
    <string name="description_vibrate">Enable/disable vibrate when touch</string>
    <string name="description_camera_overlay">Enable/Disable Camera overlay. You can switch between front and back camera</string>
    <string name="camera_overlay">Show Camera Overlay</string>
    <string name="save_as_gif">Save as GIF</string>
    <string name="delete">Delete</string>
    <string name="experimental">Experimental</string>
    <string name="detail_save_as_gif">Enables saving videos as GIF animation</string>
    <string name="shake_in_record">Shake to start/stop recording</string>
    <string name="detail_shake">Shake your device to start or stop recording</string>
    <string name="content_notification_shake">Shake your device to start recording or press this notification to cancel</string>
    <string name="guide_activity_title">Please permit usage access</string>
    <string name="guide_activity_description">You need to grant Usage Access permission to enable this feature</string>
    <string name="trim_video_success">Success</string>
    <string name="trim_video_failed">Failed</string>
    <string name="video">Video</string>
    <string name="picture">Image</string>
    <string name="setting">Setting</string>
    <string name="no_image">You don\'t have any photos!</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="start_record">Start Record</string>
    <string name="record_failed">Record failed</string>
    <string name="grant_app_permission">Grant App Usage Permission for a comprehensive phone scan effect</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="grant_now">Grant Now</string>
    <string name="record_audio_permission">Grant permission to record with mic</string>
    <string name="external_storage_permission">Grant access to the external storage memory in the device</string>
    <string name="overlay_permission">Grant permission to display on other applications</string>
    <string name="not_open_video" tools:ignore="MissingTranslation">Can\'t open video</string>

    // Bit rate
    <string name="bitrate_0">1.0 Mbit (Very low)</string>
    <string name="bitrate_1">2.5 Mbit</string>
    <string name="bitrate_2">3.5 Mbit (low)</string>
    <string name="bitrate_3">4.5 Mbit</string>
    <string name="bitrate_4">6.8 Mbit (Good)</string>
    <string name="bitrate_5">9.8 Mbit</string>
    <string name="bitrate_6">12 Mbit (Excellent)</string>
    <string name="bitrate_7">24 Mbit (Warning)</string>
    <string name="bitrate_8">48 Mbit (Warning)</string>

    // Resolution
    <string name="resolution_0">360P</string>
    <string name="resolution_1">720P</string>
    <string name="resolution_2">1080P</string>
    <string name="resolution_3">1440P</string>

    // Frames
    <string name="frame_0">25s</string>
    <string name="frame_1">30s</string>
    <string name="frame_2">35s</string>
    <string name="frame_3">40s</string>
    <string name="frame_4">50s</string>
    <string name="frame_5">60s</string>

    // Orientation
    <string name="orientation_0">Auto</string>
    <string name="orientation_1">Portrait</string>
    <string name="orientation_2">Landscape</string>

    // Audio title
    <string name="audio_title_0">None</string>
    <string name="audio_title_1">Mic</string>
    <string name="audio_title_2">Internal</string>
    <string name="audio_title_3">Mic and Internal</string>

    // Audio description
    <string name="audio_description_0">Silent video recording.</string>
    <string name="audio_description_1">Record your voice and sounds from outside the phone.</string>
    <string name="audio_description_2">Only support android 10 and above. Your app or game also needs to support internal audio recording.</string>
    <string name="audio_description_3">Only support android 10 and above. Your app or game also needs to support internal audio recording.</string>

    // File name format
    <string name="name_format_0">yyyyMMdd_hhmmss</string>
    <string name="name_format_1">ddMMyyyy_hhmmss</string>
    <string name="name_format_2">yyMMdd_hhmmss</string>
    <string name="name_format_3">ddMMyy_hhmmss</string>
    <string name="name_format_4">hhMMss_yyyymmdd</string>
    <string name="name_format_5">hhMMss_ddmmyyyy</string>
    <string name="name_format_6">hhMMss_yymmdd</string>
    <string name="name_format_7">hhMMss_ddmmyy</string>

    // Language
    <string name="language_0">English</string>
    <string name="language_1">Português</string>
    <string name="language_2">Tiếng Việt</string>
    <string name="language_3">русский</string>
    <string name="language_4">हिन्दी</string>
    <string name="language_5">日本語</string>
    <string name="language_6">한국어</string>
    <string name="language_7">Türk</string>
    <string name="language_8">French</string>
    <string name="language_9" translatable="false">Spanish</string>
    <string name="language_10">عربى</string>

    // Timer
    <string name="timer_0">None</string>
    <string name="timer_1">3s</string>
    <string name="timer_2">5s</string>
    <string name="timer_3">7s</string>
    <string name="timer_4">10s</string>
    <string name="cant_trim_video" translatable="false">Can\'n trim this video</string>
    <string name="floating_ball" translatable="false">Floating Ball</string>
    <string name="screenshot" translatable="false">ScreenShot</string>

</resources>