<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgr_notification_main"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            
            android:id="@+id/noti_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imv_record"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_pause"
                android:tint="@color/color_accent" />

            <TextView
                android:id="@+id/tv_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/pause"
                android:textColor="@color/color_828282"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            
            android:id="@+id/noti_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:padding="@dimen/_2sdp"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_play"
                android:tint="@color/color_accent" />

            <TextView
                android:id="@+id/tv_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/resume"
                android:textColor="@color/color_828282"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            
            android:id="@+id/noti_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_stop"
                android:tint="@color/color_FF000E" />

            <TextView
                android:id="@+id/tv_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/stop"
                android:textColor="@color/color_828282"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            
            android:id="@+id/noti_tools"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_tools_app"
                android:tint="@color/color_accent" />

            <TextView
                android:id="@+id/tv_tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/tools"
                android:textColor="@color/color_828282"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/color_c4c4c4"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"/>
        <LinearLayout
            
            android:id="@+id/noti_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/close"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
