<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_6sdp"
        android:background="@color/color_F2F2F2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewHeader"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/experimental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_save_as_gif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_save_as_gif"
            style="@style/ImageViewSettings"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:src="@drawable/ic_fluent_gif_24_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save_as_gif"
            style="@style/TextViewTitle"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/save_as_gif"
            app:layout_constraintBottom_toTopOf="@id/value_save_as_gif"
            app:layout_constraintStart_toEndOf="@id/imv_save_as_gif"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/value_save_as_gif"
            style="@style/TextViewDescription"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/detail_save_as_gif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sw_save_as_gif"
            app:layout_constraintStart_toEndOf="@id/imv_save_as_gif"
            app:layout_constraintTop_toBottomOf="@id/tv_save_as_gif" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_save_as_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:clickable="false"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:track="@drawable/custom_track" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_shake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_shake"
            style="@style/ImageViewSettings"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:src="@drawable/ic_shake"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_shake"
            style="@style/TextViewTitle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/shake_in_record"
            app:layout_constraintBottom_toTopOf="@id/value_shake"
            app:layout_constraintEnd_toStartOf="@id/sw_shake"
            app:layout_constraintStart_toEndOf="@id/imv_shake"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/value_shake"
            style="@style/TextViewDescription"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/detail_shake"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sw_shake"
            app:layout_constraintStart_toEndOf="@id/imv_shake"
            app:layout_constraintTop_toBottomOf="@id/tv_shake" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:clickable="false"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:track="@drawable/custom_track" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
