<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_6sdp"
        android:background="@color/color_F2F2F2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewHeader"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/custom_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_target_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_target_app"
            style="@style/ImageViewSettings"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:src="@drawable/ic_android"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_target_app"
            style="@style/TextViewTitle"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/target_app"
            app:layout_constraintBottom_toTopOf="@id/value_target_app"
            app:layout_constraintStart_toEndOf="@id/imv_target_app"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/value_target_app"
            style="@style/TextViewDescription"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/detail_target_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sw_target_app"
            app:layout_constraintStart_toEndOf="@id/imv_target_app"
            app:layout_constraintTop_toBottomOf="@id/tv_target_app" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_target_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:checked="true"
            android:clickable="false"
            android:thumb="@drawable/custom_thumb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:track="@drawable/custom_track" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_chosse_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_chosse_app"
            style="@style/ImageViewSettings"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:src="@drawable/ic_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_chosse_app"
            style="@style/TextViewTitle"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:text="@string/chosse_app"
            app:layout_constraintBottom_toTopOf="@id/value_chosse_app"
            app:layout_constraintStart_toEndOf="@id/imv_chosse_app"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/value_chosse_app"
            style="@style/TextViewDescription"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/detail_choose_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imv_next_chosse_app"
            app:layout_constraintStart_toEndOf="@id/imv_chosse_app"
            app:layout_constraintTop_toBottomOf="@id/tv_chosse_app" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_next_chosse_app"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
