<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_66000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@drawable/bgr_layout_preview"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recording_finished"
            android:textColor="@color/color_11111"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/imv_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imv_close" />

        <ImageView
            android:id="@+id/imv_close"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_11111" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/shape_imv_preview"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/imv_close"
            app:riv_corner_radius="@dimen/_8sdp" />

        <LinearLayout
            android:id="@+id/ln_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/thumbnail">

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:drawableTop="@drawable/shape_share"
                android:drawablePadding="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:text="@string/share"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:drawableTop="@drawable/shape_edit"
                android:drawablePadding="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:text="@string/edit"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:drawableTop="@drawable/sahpe_delete"
                android:drawablePadding="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:text="@string/delete"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imv_play"
            android:layout_width="@dimen/_54sdp"
            android:layout_height="@dimen/_54sdp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintBottom_toBottomOf="@id/thumbnail"
            app:layout_constraintEnd_toEndOf="@id/thumbnail"
            app:layout_constraintStart_toStartOf="@id/thumbnail"
            app:layout_constraintTop_toTopOf="@id/thumbnail"
            app:tint="@color/white" />

<!--        <include-->
<!--            layout="@layout/na"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/height_native_ads"-->
<!--            android:layout_marginBottom="@dimen/_8sdp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/ln_control" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>